...
    <string name="app_name">RSS Aggregator</string>

    <!--ACTIVITY NAME-->
    <string name="add_feed_title_activity">Add a RSS Feed</string>
    <string name="settings_activity">Settings</string>

    <string name="login_tab_login">Login</string>
    <string name="login_tab_signup">Sign Up</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_login">Log In</string>
    <string name="login_button_signup">Sign Up</string>
    <string name="login_button_success">Success</string>
    <string name="login_button_loading">Loading</string>
...
