...
        tools:ignore="ContentDescription"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSignUp"
        android:orientation="vertical"
        android:weightSum="2"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
...
